# gidde

./: README.md  meson.build
data/: gidde.appdata.xml  gidde.desktop
debian/: changelog  control  copyright
src/: Application.vala  HeaderBar.vala  MainWindow.vala  meson.build
